Update WeatherMapper and services for Record types
- Refactor WeatherMapper to work with Record DTOs and Instant/BigDecimal
- Add Javadoc for mapper class and isDataFresh method
- Update WeatherServiceImpl and CityServiceImpl for new types